Update with Backend path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,8 @@ jobs:
           pip install -e ".[test]"
           
       - name: Run tests
-        run: |
-          cd backend
-          pytest
+        working-directory: ./backend
+        run: pytest -v
 
   build:
     needs: test
