--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
           
       - name: Run tests
         working-directory: ./backend
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: pytest -v
 
   build:
