--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,9 +19,9 @@ test = [
 ]
 
 [tool.pytest.ini_options]
-testpaths = ["backend/tests"]
+testpaths = ["tests"]
 python_files = ["test_*.py"]
-pythonpath = ["."]
+pythonpath = [".", ".."]
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
