--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,5 +29,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/sherparr:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/sherparr:${{ github.event.release.tag_name }} 
+            ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-boilerplate:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-boilerplate:${{ github.event.release.tag_name }} 
