--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "sherparr"
+name = "simple-api"
 version = "0.0.1"
 description = "A simple API with health and hello endpoints"
 requires-python = ">=3.8"
